Bug 118647 - MacOS: Some system dictionaries are missing
Summary: MacOS: Some system dictionaries are missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.1 rc
Hardware: All macOS (All)
: medium normal
Assignee: How can I remove my account?
URL:
Whiteboard: target:6.2.0 target:6.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-09 18:20 UTC by Telesto
Modified: 2018-08-16 08:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-07-09 18:20:15 UTC
Description:
The MacOS app contains only a few pre-installed dictionary's. No German or Dutch. LibO 4.3.7.2 detected system dictionary's on my Mac. LibO 6.1 doesn't do that for anymore.

Add the dictionary's to the bundle or a fix for the MacOS system dictionary's 

Steps to Reproduce:
1. Open Writer
2. Change the spell check language to German (with system wide dictionary's)
3. Type something -> no spell checking

Actual Results:
No spell checking

Expected Results:
A working spell checker


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.1.0.1
Build ID: 378e26bd4f22a135cef5fa17afd5d4171d8da21a
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 1 How can I remove my account? 2018-07-10 06:31:38 UTC
Caused by 69c8e9a0607e9a197dfff8139f2ca14c2538da8a (and the corresponding cherry-pick to the 6.1 branch). The languages with system dictionaries are (for me, on 10.13.5) as follows. This is a list from adding debug output to MacSpellChecker::getLocales() in lingucomponent/source/spellcheck/macosxspell/macspellimp.mm:

lang:'en' country:'GB'
lang:'en' country:''
lang:'en' country:'AU'
lang:'en' country:'IN'
lang:'en' country:'SG'
lang:'en' country:'CA'
lang:'en' country:'JP'
lang:'sv' country:''
lang:'fi' country:''
lang:'da' country:''
lang:'de' country:''
lang:'es' country:''
lang:'fr' country:''
lang:'it' country:''
lang:'nl' country:''
lang:'nb' country:''
lang:'pl' country:''
lang:'pt' country:'BR'
lang:'pt' country:'PT'
lang:'tr' country:''
lang:'ru' country:''
lang:'ko' country:''

In the Character dialogue I do see the marker indicating that a spelling dictionary is present for languages in the above list that have a non-empty country in the above list. For instance "English (India)". And the "fr" apparently gets interpreted by LO as "French (France)". But indeed no German is there.

If I add a similar check for plain "de" as there already is for "en", then "German (Germany)" does get the spell check marker.

>                else if (lang == "de" && country.isEmpty())
>                    country = "DE";

I guess the equivalent would need to be done for all the languages in the list without a country. or then just expand each such language without territory to all the combinations that LO knows. Will do the latter.
Comment 2 How can I remove my account? 2018-07-10 07:36:12 UTC
Suggested fix in https://gerrit.libreoffice.org/#/c/57220/
Comment 3 Commit Notification 2018-07-10 09:12:05 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d66df262ee4fd8abc794ef9ef764a182b0da29ea

tdf#118647: Improve handling of system spell dictionaries on macOS

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Telesto 2018-07-10 10:33:53 UTC
Didn't expect a fix so soon ;-). Many thanks for that! 

And even more for  https://cgit.freedesktop.org/libreoffice/core/commit/?id=3b6905e37a6baac08eaff00e6e42aced7d6896df LibreOffice is now blazing fast; Super!
Comment 5 Xisco Faulí 2018-07-11 08:29:16 UTC
Patch for 6-1: https://gerrit.libreoffice.org/#/c/57226/1
Comment 6 Commit Notification 2018-07-16 15:06:53 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8158035a44b4577c5a620decd96d2d1ca0c7c3b9&h=libreoffice-6-1

tdf#118647: Improve handling of system spell dictionaries on macOS

It will be available in 6.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-08-16 08:21:58 UTC
A polite ping to  Tor Lillqvist:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks