tdf#118647: Improve handling of system spell dictionaries on macOS

The system has generic spell dictionaries for languages spoken in many
countries, but LibreOffice wants them to correspond to specific
language-country combinations. So do it like that then.

Change-Id: I9ec4bb4302b2f1eec3ce7b1c1ef8f2be867bad52
Reviewed-on: https://gerrit.libreoffice.org/57220
Tested-by: Jenkins
Reviewed-by: Tor Lillqvist <tml@collabora.com>
(cherry picked from commit d66df262ee4fd8abc794ef9ef764a182b0da29ea)
Reviewed-on: https://gerrit.libreoffice.org/57349
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>